--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: Build ZMK firmware
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
   push:
-    paths:
-      - "boards/*"
-      - "config/*"
+    branches:
+      - main
 
 jobs:
   build:
