Try fix left-cornix-main

--- a/boards/shields/cornix/cornix_right.conf
+++ b/boards/shields/cornix/cornix_right.conf
@@ -1,14 +1,44 @@
-# USB
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_KEYBOARD_NAME="Cornix"
 
-# 增加键盘消抖
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_USB=n
+CONFIG_ZMK_USB=n
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
 
 CONFIG_PINCTRL=y
 CONFIG_INPUT=y
 
-# RGB
-CONFIG_SPI=n
-
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# RGB
+CONFIG_SPI=n
+# led
+CONFIG_ZMK_BACKLIGTH=n
+
+# 增加键盘的 BLE 无线电的发射功率
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# 电池电量报告间隔时间单位是秒
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# 睡眠/屏幕
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_DISPLAY=n
+
+CONFIG_ZMK_POINTING=y
+
+# 3 profiles (n+2)
+CONFIG_BT_MAX_CONN=6
+CONFIG_BT_MAX_PAIRED=6
+
+# zmk studio相关配置
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
+
+# 键盘消抖
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
