--- a/boards/arm/cornix/cornix_left_defconfig
+++ b/boards/arm/cornix/cornix_left_defconfig
@@ -34,6 +34,7 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 CONFIG_ZMK_KEYBOARD_NAME="Cornix"
 CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
