--- a/boards/arm/cornix/cornix_right_defconfig
+++ b/boards/arm/cornix/cornix_right_defconfig
@@ -31,6 +31,8 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 CONFIG_ZMK_USB=n
 CONFIG_ZMK_BLE=y
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 
